<?xml version="1.0" encoding="utf-8"?>

<!--
 * Catverbs - A portable Catalan conjugation reference for Android
 * Copyright (C) 2012  Neil Roberts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; version 2 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
  <string name="app_name">Catverbs</string>
  <string name="search">Buscar</string>
  <string name="no_results">Cap resultat trobat</string>
  <string name="type_to_filter">Tecleja per buscar</string>
  <string name="menu_search">Buscar</string>
  <string name="menu_about">Quant a</string>
  <string name="menu_zoom">Apropar el text</string>
  <string name="close">Tancar</string>

  <string name="article_page1">simple</string>
  <string name="article_page2">que</string>
  <string name="article_page3">a+b</string>

  <string name="indicative_header">Indicatiu</string>
  <string name="subjunctive_header">Subjuntiu</string>
  <string name="imperative_header">Imperatiu</string>
  <string name="impersonal_header">Formes no personals</string>
  <string name="present_header">Present</string>
  <string name="imperfect_header">Imperfet</string>
  <string name="simple_past_header">Passat simple</string>
  <string name="future_header">Futur</string>
  <string name="conditional_header">Condicional</string>
  <string name="perfect_header">Perfet</string>
  <string name="pluperfect_header">Plusquamperfet</string>
  <string name="periphrastic_past_header">Passat perifràstic</string>
  <string name="anterior_past_header">Passat anterior</string>
  <string name="periphrastic_anterior_past_header">Passat anterior perifràstic</string>
  <string name="future_perfect_header">Futur perfet</string>
  <string name="conditional_perfect_header">Condicional perfet</string>
  <string name="gerund_header">Gerundi</string>
  <string name="participle_header">Participi</string>

  <string name="about_message">
<b>Catverbs @VERSION@</b>\n
\nCopyright © 2012, 2013, 2014, 2015 Neil Roberts\n
\nThis program comes with ABSOLUTELY NO WARRANTY. This is free
software and you are welcome to redistribute it under certain
conditions. Click here for details.
  </string>
</resources>
