<?xml version="1.0" encoding="utf-8"?>

<!--
 * Catverbs - A portable Catalan conjugation reference for Android
 * Copyright (C) 2014  Neil Roberts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; version 2 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/article_page1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/article_root">

    <TextView android:text="@string/indicative_header"
              style="@style/article_section" />

    <TextView android:text="@string/present_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/present_indicative_content"
              style="@style/article_content" />
    <TextView android:text="@string/imperfect_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/imperfect_indicative_content"
              style="@style/article_content" />
    <TextView android:text="@string/future_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/future_indicative_content"
              style="@style/article_content" />
    <TextView android:text="@string/conditional_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/conditional_indicative_content"
              style="@style/article_content" />

    <TextView android:text="@string/impersonal_header"
              style="@style/article_section" />

    <TextView android:text="@string/gerund_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/gerund_content"
              style="@style/article_content" />
    <TextView android:text="@string/participle_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/participle_content"
              style="@style/article_content" />

  </LinearLayout>

</ScrollView>
