<?xml version="1.0" encoding="utf-8"?>

<!--
* Catverbs - A portable Catalan conjugation reference for Android
* Copyright (C) 2014  Neil Roberts
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation; version 2 of the License.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/article_page2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/article_root">

    <TextView android:text="@string/subjunctive_header"
              style="@style/article_section" />

    <TextView android:text="@string/present_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/present_subjunctive_content"
              style="@style/article_content" />
    <TextView android:text="@string/imperfect_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/imperfect_subjunctive_content"
              style="@style/article_content" />

    <TextView android:text="@string/imperative_header"
              style="@style/article_section" />
    <TextView android:id="@+id/imperative_content"
              style="@style/article_content" />

    <TextView android:text="@string/indicative_header"
              style="@style/article_section" />

    <TextView android:text="@string/simple_past_header"
              style="@style/article_subsection" />
    <TextView android:id="@+id/simple_past_indicative_content"
              style="@style/article_content" />

  </LinearLayout>

</ScrollView>
